credit-card-processing/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vid-cc-processing-app
  namespace: vid-namespace
  labels:
    app: vid-cc-processing-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vid-cc-processing-app
  template:
    metadata:
      labels:
        app: vid-cc-processing-app
    spec:
      containers:
        - name: vid-cc-processing-app
          image: vidhanchandrauk/credit-card-processing:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: vid-cc-service-svc
  namespace: vid-namespace
spec:
  ports:
    - targetPort: 8080
      port: 80
  selector:
    app: vid-cc-processing-app
