credit-card-processing/ingress.yaml
# https://kubernetes.io/docs/concepts/services-networking/ingress/#the-ingress-resource
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vid-cc-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
  namespace: vid-namespace
spec:
  rules:
    - host: vidhan-sap-test.com
      http:
        paths:
          - path: /saptest/?(.+)
            pathType: Prefix
            backend:
              service:
                name: vid-cc-service-svc
                port:
                  number: 80
